@@ -1,2 +1,3 @@
+KAFKA_0_10_2_HOST=kafka_0_10_2
 KAFKA_HOST=kafka
 KAFKA_PORT=9092
