@@ -18,7 +18,6 @@
 package kafka
 
 import (
-	"bytes"
 	"crypto/tls"
 	"fmt"
 	"io"
@@ -370,7 +369,7 @@ func findMatchingAddress(
 	}
 
 	// get connection 'port'
-	_, port, err := net.SplitHostPort(addr)
+	host, port, err := net.SplitHostPort(addr)
 	if err != nil || port == "" {
 		port = "9092"
 	}
@@ -390,6 +389,19 @@ func findMatchingAddress(
 		debugf("try to match with fqdn: %v (%v)", host, port)
 		if i, found := indexOf(net.JoinHostPort(host, port), brokers); found {
 			return i, true
+		}
+	}
+
+	// try matching ip of configured host with broker list, this would
+	// match if hosts of advertised addresses are IPs, but configured host
+	// is a hostname
+	ips, err := net.LookupIP(host)
+	if err == nil {
+		for _, ip := range ips {
+			addr := net.JoinHostPort(ip.String(), port)
+			if i, found := indexOf(addr, brokers); found {
+				return i, true
+			}
 		}
 	}
 
@@ -466,7 +478,7 @@ func lookupHosts(ips []net.IP) []string {
 func anyIPsMatch(as, bs []net.IP) bool {
 	for _, a := range as {
 		for _, b := range bs {
-			if bytes.Equal(a, b) {
+			if a.Equal(b) {
 				return true
 			}
 		}
